--- a/style.css
+++ b/style.css
@@ -60,5 +60,76 @@ button{
 .camera{
     width: 440px;
     height: 414px;
+    
+}
+.camera img:hover{
+    transform: scale(1.1);
+    transition:  1s linear;
+}
+/* populer collection style */
+.populer-taitle{
+    color:3A3A3A;
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+}
+/* collection style */
+.Popular-Collection{
+    margin-left: 196px;
+}
+.collection{
+    width: 329px;
+    height: 476px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px
+    
+}
+.collection-thamnial{
+    margin-left: 14px;
+    padding-top: 17px;
+}
+.collection-thamnial img{
+    width: 300px;
+    Height 256px;
+    border-radius: 5px;
+    
    
+}
+.collection-title{
+    font-size: 28px;
+    color: #18191F;
+    font-weight: 500;
+    margin-left: 14px;
+}
+.dolar{
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 24px;
+    font-weight: normal;
+    margin-left: 14px;
+}
+.star{
+    color: #FB8200;
+    margin-left: 14px;
+}
+.star-container{
+    display: flex;
+    align-items: center;
+}
+.star-valu{
+    font-size: 14px;
+    font-weight: bold;
+    color: #5E6366;
+    Width 29px;
+    Height 22px;
+    margin-left: 80px;
+
+   
+}
+.peragraph{
+    font-size: 14px;
+    color: #787885;
+    font-weight: bold;
+    line-height: 143%;
+    margin-left: 14px;
 }
