--- a/style.css
+++ b/style.css
@@ -183,3 +183,12 @@ left: 665px;
     width: 155px;
     
 }
+/* footer */
+footer{
+    text-align: center;
+    margin-top: 150px;
+    background: #040a2e;
+    color: white;
+
+}
+
